syntax = "proto3";

package iamnande.cardmod.health.v1;

import "google/api/annotations.proto";

option go_package = "github.com/iamnande/cardmod/pkg/api/healthv1;healthv1";

// HealthAPI provides and heartbeat endpoint to check the service is up and running.
service HealthAPI {

  // Check returns the status of the service
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse){
    option (google.api.http) = {
      get: "/v1/health"
    };
  };

}

// ServiceStatus is the enum of allowable statuses.
enum ServiceStatus {

  // we don't know, somehow?
  UNKNOWN = 0;

  // we fully broken
  SERVING = 1;

  // we're kinda broken :|
  NOT_SERVICE = 2;

}

// HealthCheckRequest is the request model of the heartbeat endpoint.
// TODO: enable service specific checking
//       services so far: api (implicit), database.
message HealthCheckRequest {
  // service is the specific service to check
}

// HealthCheckRequest is the response model of the heartbeat endpoint.
// TODO: enable service wholistic/specific response
message HealthCheckResponse {
  // status is the current status of the service.
  ServiceStatus status = 1;
}